# beam

./: .gitignore  CMakeLists.txt  README.md  beam_paper_rewrite_handoff.md  experiments.md  算法理解报告.md  运行方式.md
build_manual/: beam
build_stage0_baseline/: beam  beam_profile
docs/: beam_x_baseline.md  beam_x_stage0_baseline.csv  beam_x_stage0_freeze.sha256  beam_x_stage0_overhead.csv  beam_x_stage0_profile.md  beam_x_stage0_profile_rounds.csv  beam_x_stage0_profile_summary.csv  beam_x_stage0_summary.csv  beam_x_stage1_freeze.sha256  beam_x_stage1a_cost_oracle.md  beam_x_stage1b_cost_oracle_integration.md  beam_x_stage2_profile.md  beam_x_stage2_quotient_graph_design.md  beam_x_stage2_results.csv  beam_x_stage2_task1_paired.csv  beam_x_stage2_task1_row_view.md  beam_x_stage2_task4_acquisition_audit.md  beam_x_stage2_task4_measurements.csv  beam_x_stage2_task5_exact_kernel.md  beam_x_stage2_task5_results.csv  beam_x_stage3a_candidate_index.md  beam_x_stage3a_results.csv  beam_x_stage3b_residual_signature.md  beam_x_stage3b_results.csv  beam_x_stage4a_safe_certification.md  beam_x_stage5a_commit_policy_design.md  beam_x_stage5a_commit_policy_results.md  paper_claim_evidence_matrix.md  paper_evidence_inventory.md  paper_evidence_table.csv  paper_experiment_selection.md  paper_missing_experiments.md  paper_proxy_exact_audit_status.md  paper_ready_experiment_tables.md  代码审计.md
docs/stage0_overhead_runs/: AM_1.csv  AM_2.csv  AM_3.csv  DB_1.csv  DB_2.csv  DB_3.csv  EM_1.csv  EM_2.csv  EM_3.csv  FA_1.csv  FA_2.csv  FA_3.csv
include/: candidate_index.hpp  compression_metrics.hpp  cost_oracle.hpp  cuda_scoring.hpp  quotient_graph.hpp  sweg.hpp
include/graph_io/: graph.hpp  graph_io.hpp  utils.hpp
src/: candidate_index.cpp  cost_oracle.cpp  cuda_scoring.cu  cuda_scoring_stub.cpp  main.cpp  quotient_graph.cpp  scoring_cpu.cpp  sweg.cpp
src/graph_io/: graph_io.cpp
